add beers model and insert same sample data as in punk-api
